--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~43.0.2",
-    "expo-google-app-auth": "^9.0.0",
     "expo-status-bar": "~1.1.0",
     "firebase": "9.1.0",
+    "firebase-admin": "^10.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -25,8 +25,7 @@
     "react-native-screens": "~3.8.0",
     "react-native-signature-canvas": "^4.3.0",
     "react-native-web": "0.17.1",
-    "react-navigation": "^4.4.4",
-    "watchman": "^1.0.0"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
